--- a/year-2023/www-techniques/meat-in-bread/api/package.json
+++ b/year-2023/www-techniques/meat-in-bread/api/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
