--- a/year-2023/www-techniques/meat-in-bread/api/package.json
+++ b/year-2023/www-techniques/meat-in-bread/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -23,7 +24,6 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
-    "typescript": "^4.9.3"
+    "ts-node": "^10.9.1"
   }
 }
