--- a/year-2023/www-techniques/meat-in-bread/front/package.json
+++ b/year-2023/www-techniques/meat-in-bread/front/package.json
@@ -21,8 +21,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
