--- a/year-2023/www-techniques/meat-in-bread/api/package.json
+++ b/year-2023/www-techniques/meat-in-bread/api/package.json
@@ -19,14 +19,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
-    "typescript": "^4.9.3"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "typescript": "^4.9.3",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.10",
-    "concurrently": "^7.6.0",
     "ts-node": "^10.9.1"
   }
 }
