DAPP: Assignment-01 Init

--- a/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
+++ b/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
@@ -3,4 +3,18 @@ project(assignment_01)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(assignment_01 main.cpp)
+find_package(MPI REQUIRED)
+
+add_executable(assignment_01 main.cpp
+        Main.cpp
+        Alloc.cpp
+        LifeSequentialImplementation.cpp
+        Rules.cpp
+        SimpleRules.cpp
+        Main.cpp
+        LifeParallelImplementation.cpp
+        LifeParallelImplementation.h
+        Main.cpp
+        Main.cpp)
+
+target_link_libraries(assignment_01 PRIVATE MPI::MPI_CXX)
