DAPP: Assignment-01 Init

--- a/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
+++ b/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
@@ -5,16 +5,16 @@ set(CMAKE_CXX_STANDARD 11)
 
 find_package(MPI REQUIRED)
 
-add_executable(assignment_01 main.cpp
+add_executable(assignment_01
         Main.cpp
         Alloc.cpp
-        LifeSequentialImplementation.cpp
         Rules.cpp
         SimpleRules.cpp
-        Main.cpp
         LifeParallelImplementation.cpp
         LifeParallelImplementation.h
-        Main.cpp
-        Main.cpp)
+        LifeSequentialImplementation.cpp
+        LifeSequentialImplementation.h
+        Life.cpp
+)
 
 target_link_libraries(assignment_01 PRIVATE MPI::MPI_CXX)
