DAPP: Assignment-01 Correct result local

--- a/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
+++ b/year-2023/diffuse-and-parallel-programming/assignment-01/CMakeLists.txt
@@ -7,14 +7,17 @@ find_package(MPI REQUIRED)
 
 add_executable(assignment_01
         Main.cpp
-        Alloc.cpp
         Rules.cpp
+        Rules.h
+        Alloc.cpp
         SimpleRules.cpp
+        SimpleRules.h
         LifeParallelImplementation.cpp
         LifeParallelImplementation.h
         LifeSequentialImplementation.cpp
         LifeSequentialImplementation.h
         Life.cpp
+        Life.h
 )
 
 target_link_libraries(assignment_01 PRIVATE MPI::MPI_CXX)
